# swig-cpp-blog-example

./: CMakeLists.txt  README.md  family.i
source/: Child.cpp  Child.hpp  Parent.cpp  Parent.hpp
